Bug #1765276: Aligned checkbox bulk actions button in notifications
behatnotneeded

--- a/htdocs/theme/raw/sass/features/_notification.scss
+++ b/htdocs/theme/raw/sass/features/_notification.scss
@@ -11,6 +11,9 @@
 }
 .notification-parent {
     .bulk-actions {
+        label {
+            font-size: 16px;
+        }
         @include media-breakpoint-up(sm) {
             float: left;
         }
